tests/paczka2/big_fuzzy/18111383.err
Error in line 1: N8ho4W2Co S952 3,7
Error in line 12: PAksMuodi9 S952 58,6
Error in line 19: PAksMuodi9 A548 90,8
Error in line 21: nyq1Qj2XrZW S327 98,2
Error in line 22: nyq1Qj2XrZW A686 59,5
Error in line 30: PAksMuodi9 A686 0,9
Error in line 24: nyq1Qj2XrZW A548 86,8
Error in line 45: PAksMuodi9 A686 88,2
Error in line 53: S952 A686 14,9
Error in line 58: S952 S952 5,2
Error in line 68: N8ho4W2Co S327 36,3
Error in line 81: 3fmmrrT A686 49,9
Error in line 78: S952 A686 86,6
Error in line 56: 8hv7IEt8f A686 440,0
Error in line 82: 3fmmrrT S327 47,2
Error in line 87: FVxs S327 70,3
Error in line 98: N8ho4W2Co S952 79,1
Error in line 103: N8ho4W2Co S327 54,7
Error in line 104: N8ho4W2Co S952 93,8
Error in line 115: N8ho4W2Co S327 87,3
Error in line 118: N8ho4W2Co A548 54,4
Error in line 124: FVxs A548 31,6
Error in line 131: PAksMuodi9 S327 68,48
Error in line 130: nyq1Qj2XrZW S952 57,7
Error in line 129: PAksMuodi9 S952 86,4
Error in line 138: PAksMuodi9 S327 115,6
Error in line 147: 3fmmrrT A686 75,20
Error in line 137: 3fmmrrT A686 41,5
Error in line 168: S952 S327 7,4
Error in line 159: 3fmmrrT S952 25,2
Error in line 181: 3fmmrrT S327 86,0
Error in line 193: 3fmmrrT S327 84,4
Error in line 205: nyq1Qj2XrZW A686 5,0
Error in line 207: nyq1Qj2XrZW A548 42,7
Error in line 208: PAksMuodi9 S952 7,3
Error in line 215: PAksMuodi9 A686 57,8
Error in line 224: 8hv7IEt8f S952 78,6
Error in line 227: 8hv7IEt8f S327 52,7
Error in line 235: PAksMuodi9 A548 55,03
Error in line 225: FVxs S952 25,0
Error in line 233: N8ho4W2Co S327 51,8
Error in line 247: 8hv7IEt8f S952 20,01
